# personal-software

./: .gitignore  CLAUDE.md  README.md  backup.sh  immich-backup.service  main.py  progress.md  pyproject.toml  running_tracker.py
.chief/prds/generalize/: prd.json  prd.md
.chief/prds/main/: prd.json  prd.md
domain-search/: .pre-commit-config.yaml  AGENTS.md
domain-search/.github/: PULL_REQUEST_TEMPLATE.md
domain-search/assets/: demo.tape
domain-search/domain_search/: dns_checker.py  exporter.py  hack_generator.py  rdap_checker.py
domain-search/tests/: conftest.py  test_dns_checker.py  test_rdap_checker.py  test_rich_output.py  test_search.py
domain_search/: cli.py  dns_checker.py  exporter.py  rdap_checker.py  tld_list.py  types.py
immich-backup/: README.md  backup.sh  immich-backup.timer  install.sh  uninstall.sh
plain-text-running-tracker/: pyproject.toml  runs.md
plain-text-running-tracker/tests/: test_running_tracker.py
tests/: test_exporter.py  test_hack_generator.py  test_rdap_checker.py  test_rich_output.py  test_search.py  test_tld_list.py
