[project]
name = "domain-search"
version = "0.1.0"
description = "CLI tool to search for available domain names across all known TLDs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
